--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "firebase": "^9.1.3",
+    "nanoid": "^3.1.30",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-sort-list": "0.0.11",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
